Wrong behaviour of <details> <summary>
Categories
(Core :: DOM: Core & HTML, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox67 | --- | fixed |
People
(Reporter: matthias.miguelkoehler, Assigned: TYLin)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:65.0) Gecko/20100101 Firefox/65.0
Steps to reproduce:
I created an example here: https://stackoverflow.com/questions/53353524/handle-details-tag-and-checkbox-click-event-with-firefox
Click on a child button element of <summary>
Actual results:
<summary> of <details> showed expanded content.
Expected results:
<summary> of <details> shouldnt show expanded content.
![]() |
||
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Comment 1•4 years ago
|
||
Ting-Yu might recall something about details/summary :)
Comment 2•4 years ago
|
||
Probably <summary> should do something like what <label> does?
Assignee | ||
Comment 3•4 years ago
|
||
I can fix this one.
Emilio, thanks for the tip :)
Assignee | ||
Comment 4•4 years ago
|
||
Assignee | ||
Comment 5•4 years ago
|
||
When nsGenericHTMLElement::IsInteractiveHTMLContent() was introduced,
HTMLDetailsElement didn't exist yet. It's better to override
IsInteractiveHTMLContent() for HTMLDetailsElement than check the details
tag in its parent class.
Depends on D18791
Updated•4 years ago
|
Pushed by aethanyc@gmail.com: https://hg.mozilla.org/integration/autoland/rev/a2336e360977 Prevent Label and Summary elements from handling click event if clicking on interactive html content. r=smaug https://hg.mozilla.org/integration/autoland/rev/4d0958fba8db Override IsInteractiveHTMLContent() for HTMLDetailsElement. r=smaug
Comment 7•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/a2336e360977
https://hg.mozilla.org/mozilla-central/rev/4d0958fba8db
Description
•