Bug 1524893 - Override IsInteractiveHTMLContent() for HTMLDetailsElement. r=smaug

When nsGenericHTMLElement::IsInteractiveHTMLContent() was introduced,
HTMLDetailsElement didn't exist yet. It's better to override
IsInteractiveHTMLContent() for HTMLDetailsElement than check the details
tag in its parent class.

Differential Revision: https://phabricator.services.mozilla.com/D18792